--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -84,20 +84,20 @@
     color: #F48FB1; /* Pastel pink color */
 }
 
-/* Animation triggered by a class */
-.open-envelope .lid.one {
+/* Envelope animation on hover */
+.custom-envelope-wrapper:hover .lid.one {
     transform: rotateX(90deg);
     transition-delay: 0s;
 }
 
-.open-envelope .lid.two {
+.custom-envelope-wrapper:hover .lid.two {
     transform: rotateX(180deg);
-    transition-delay: 0.20s;
+    transition-delay: 0.25s;
 }
 
-.open-envelope .letter {
+.custom-envelope-wrapper:hover .letter {
     transform: translateY(-50px);
-    transition-delay: 0.3s;
+    transition-delay: 0.5s;
 }
 .seal {
     position: absolute; /* Keep as is */
